夢中人紹介セクション修正

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lumpcore Recruit</title>
         <!-- 🔽 Preloadをここに追加 -->
-        <link rel="preload" as="image" href="assets/images/logo.png">
+        <link rel="preload" as="image" href="assets/images/logo/lumpcore-logo.png">
         <link rel="preload" as="image" href="assets/images/team/team1.jpg">
         <link rel="preload" as="image" href="assets/images/team/team9.jpg">
 
