--- a/employee/detail.html
+++ b/employee/detail.html
@@ -56,6 +56,6 @@
 
   <!-- スクリプトの読み込み -->
   <script src="employee.js"></script>
-  <script src="../scripts.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
