--- a/employee/detail.html
+++ b/employee/detail.html
@@ -20,7 +20,7 @@
       </div>
 
       <nav>
-        <ul class="nav-list">
+          <ul class="nav-list">
           <li class="nav-item dropdown">
             <a href="#" class="nav-link">
               <div class="menu-icon">
@@ -45,12 +45,20 @@
 
   <!-- メインセクション：社員詳細 -->
   <main>
-    <div class="employee-detail-container">
-      <img id="employee-photo" alt="社員写真" />
-      <h2 id="employee-name"></h2>
-      <p id="employee-role"></p>
-      <p id="employee-mbti"></p>
-      <div id="employee-interview"></div>
+    <section id="employee-detail">
+      <div class="profile-section">
+        <img id="employee-photo" class="profile-photo" alt="社員写真" />
+        <h2 id="employee-name"></h2>
+        <div class="chips">
+          <span id="employee-role" class="chip"></span>
+          <span id="employee-mbti" class="chip"></span>
+        </div>
+        <blockquote id="employee-quote" class="quote"></blockquote>
+      </div>
+      <div class="qa-section" id="employee-interview"></div>
+    </section>
+    <div class="next-employee">
+      <a id="next-employee-link" href="#">次の社員へ →</a>
     </div>
   </main>
 
