社員カード編集①

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="glass-card">
     <img src="assets/images/mission-visual.png" alt="株式会社ランプコア　ミッション" class="section-image" loading="lazy">
         <div class="overlay-text mission-text">
-        <h3>夢を笑われない<br>社会を作る</h3>
+        <h3>夢が笑われない<br>社会を作る</h3>
         </div>
     </div>
         <p>学歴や社歴に左右されず、努力する人すべてにチャンスが届き、夢を語ると笑われる風潮を変える社会を創る。
