社員カード編集スマホ版②

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preload" as="image" href="assets/images/team/team9.jpg">
 
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="smallstyle.css">
         <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho:wght@400&family=Montserrat:wght@400;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Hina Mincho, Montserrat, Noto Sans JP フォントを使用 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"><!--リンクアイコン用-->
     </head>                 
