--- a/employee/detail.html
+++ b/employee/detail.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>社員紹介 | Lumpcore</title>
   <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="../smallstyle.css">
   <link rel="stylesheet" href="employee.css" />
 </head>
 
