トップスライド編集②

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </header>
 
     <section id="top-image">
-        <!-- 上段スライド（フェードイン付き） -->
-        <div class="carousel-row top hidden fade-in">
+        <!-- 上段スライド -->
+        <div class="carousel-row top">
             <div class="carousel-track" id="carousel-track-top"></div>
         </div>
 
@@ -64,8 +64,8 @@
             <img src="assets/images/logo/lumpcore-logo.png" alt="LUMPCOREロゴ" class="centered-logo">
         </div>
         
-        <!-- 下段スライド（フェードイン付き） -->
-        <div class="carousel-row bottom hidden fade-in">
+        <!-- 下段スライド -->
+        <div class="carousel-row bottom">
             <div class="carousel-track" id="carousel-track-bottom"></div>
         </div>
 
