トップスライド編集④

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <a href="line://app">LINEで応募</a>
     </section>
 
-    <div id="entry-nav-wrap" class="entry-nav-wrap bottom-right">
+    <div id="entry-nav-wrap" class="entry-nav-wrap bottom-right hidden">
         <a href="#apply" class="entry-nav-link apply">
             <span class="icon">📄</span>
             <span class="text">応募</span>
