トップスライド編集⑤

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header id="header" class="hidden">
         <div class="container">
             <div class="logo">
-                <h1>Lumpcore</h1>
+                <h1>LUMPCORE</h1>
                 <span class="subtitle">Recruit</span>
             </div>
             <nav>
@@ -46,6 +46,7 @@
                 </ul>
             </nav>
         </div>
+        <p class="header-tagline">2025年インターン募集中<span class="tagline-bang">!!</span></p>
     </header>
 
     <section id="top-image">
