--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h4>- 人の心に夢と楽しさを -</h4>
         </div>
         </div>
-        <p>"Let’s Enjoy Life-人の心に夢と楽しさを-"というパーパスには、日常に埋もれがちな"ワクワク"や""夢見る心"を蘇らせ、人と人を共感でつなぎ、一瞬一瞬をかけがえのない体験へと昇華させるという強い思いが込められています。
+        <p>"Let’s Enjoy Life-人の心に夢と楽しさを-"というパーパスには、日常に埋もれがちな"ワクワク"や"夢見る心"を蘇らせ、人と人を共感でつなぎ、一瞬一瞬をかけがえのない体験へと昇華させるという強い思いが込められています。<br>
             私たちはこの言葉を心に刻み、若手"夢忠人"の創造力と情熱を結集してお客様の心を揺さぶる驚きと喜びを生み出し続けることで、ブランドと生活者の深い共感を育み、新たな価値を創造してまいります。
         </p>
     </section>
@@ -96,9 +96,9 @@
         <h3>夢が笑われない<br>社会を作る</h3>
         </div>
     </div>
-        <p>学歴や社歴に左右されず、努力する人すべてにチャンスが届き、夢を語ると笑われる風潮を変える社会を創る。
-            私たちは仲間の夢を讃え合う"夢忠人"として、自ら夢を体現し、その成果で会社と社会に貢献します。
-            社員一人ひとりが人生の当事者として100%の楽しさを届けられる。
+        <p>学歴や社歴に左右されず、努力する人すべてにチャンスが届き、夢を語ると笑われる風潮を変える社会を創る。<br>
+            私たちは仲間の夢を讃え合う"夢忠人"として、自ら夢を体現し、その成果で会社と社会に貢献します。<br>
+            社員一人ひとりが人生の当事者として100%の楽しさを届けられる。<br>
             ランプコアは夢を語れずにいる人の背中を押し、共に夢をかなえる舞台です。
         </p>
     </section>
