ヘッダーとドロップダウンの編集

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body class="bg-default">
         <div class="background-wrapper"></div>
 
-    <header id="header" class="hidden">
+    <header id="header">
         <div class="container">
             <div class="logo">
                 <h1>LUMPCORE</h1>
@@ -35,12 +35,12 @@
                             </div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#purpose">Purpose</a></li>
-                            <li><a href="#mission">Mission</a></li>
-                            <li><a href="#employee-interviews">夢忠人紹介</a></li>
-                            <li><a href="#business">事業紹介</a></li>
-                            <li><a href="#news">ニュース</a></li>
-                            <li><a href="#contact">お問い合わせ</a></li>
+                            <li><a href="#purpose">・Purpose</a></li>
+                            <li><a href="#mission">・Mission</a></li>
+                            <li><a href="#employee-interviews">・夢忠人紹介</a></li>
+                            <li><a href="#business">・事業紹介</a></li>
+                            <li><a href="#news">・ニュース</a></li>
+                            <li><a href="#contact">・お問い合わせ</a></li>
                         </ul>
                     </li>
                 </ul>
