背景画像の演出変更

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="preload" as="image" href="assets/images/logo/lumpcore-logo.png">
         <link rel="preload" as="image" href="assets/images/team/team1.jpg">
         <link rel="preload" as="image" href="assets/images/team/team9.jpg">
+        <link rel="preload" as="image" href="assets/images/backgrounds/headerbackground.png">
+        <link rel="preload" as="image" href="assets/images/backgrounds/newbackground.png">
+        <link rel="preload" as="image" href="assets/images/backgrounds/headerbackground-mobile.png">
+        <link rel="preload" as="image" href="assets/images/backgrounds/newbackground-mobile.png">
 
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="smallstyle.css">
