検索エンジン最適

--- a/employee/detail.html
+++ b/employee/detail.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="株式会社ランプコアの社員紹介ページ。夢忠人のプロフィールとインタビューを掲載。" />
+  <meta name="keywords" content="ランプコア,社員紹介,夢忠人,採用,インタビュー" />
+  <meta property="og:title" content="社員紹介 | Lumpcore" />
+  <meta property="og:description" content="株式会社ランプコアの社員紹介ページ。夢忠人のプロフィールとインタビューを掲載。" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://example.com/employee/detail.html" />
+  <meta property="og:image" content="../assets/images/logo/lumpcore-logo.png" />
   <title>社員紹介 | Lumpcore</title>
   <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="../smallstyle.css">
