--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="株式会社ランプコアの採用サイト。目的・ミッション、事業紹介やニュースを紹介します。">
+        <meta name="keywords" content="ランプコア,採用,求人,夢忠人,事業紹介,ニュース">
+        <meta property="og:title" content="Lumpcore Recruit">
+        <meta property="og:description" content="株式会社ランプコアの採用サイト。目的・ミッション、事業紹介やニュースを紹介します。">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://example.com/">
+        <meta property="og:image" content="assets/images/logo/lumpcore-logo.png">
         <title>Lumpcore Recruit</title>
         <!-- 🔽 Preloadをここに追加 -->
         <link rel="preload" as="image" href="assets/images/logo/lumpcore-logo.png">
