--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="purpose" class="glass-section">
         <div class="glass-card">
             <img src="assets/images/purpose-visual.png" alt="株式会社ランプコア　パーパス" class="section-image" loading="lazy">
-            <div class="overlay-text">
+            <div class="overlay-text fade-in">
                 <h3>Let’s Enjoy Life</h3>
                 <h4>- 人の心に夢と楽しさを -</h4>
             </div>
@@ -102,7 +102,7 @@
     <section id="mission" class="glass-section">
     <div class="glass-card">
     <img src="assets/images/mission-visual.png" alt="株式会社ランプコア　ミッション" class="section-image" loading="lazy">
-        <div class="overlay-text mission-text">
+        <div class="overlay-text mission-text fade-in">
         <h3>夢が笑われない<br>社会を作る</h3>
         </div>
     </div>
