事業紹介編集①

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <div class="business-container">
 
             <div class="business-item">
-                <img src="assets/images/business/coordinator.jpg" alt="人材コーディネーター" class="business-image" loading="lazy">
+                <img src="assets/images/business/eventpromotion.png" alt="イベントプロモーション" class="business-image" loading="lazy">
                 <div class="business-description">
-                    <h3>人材コーディネーター</h3>
-                    <p>千葉県を中心に全国の携帯ショップおよび家電量販店にて弊社の常勤スタッフ、スポットスタッフがイベント、販売業務、接客、案内などを行います。</p>
+                    <h3>イベントプロモーション</h3>
+                    <p>若手スタッフ中心でつくりあげる、思わず笑顔になる販促イベント。お客様との信頼関係を築く”楽しさ×営業力”のスタイルで高い満足度を実現。「夢中になれる体験」で心を動かし、ブランドの想いを届ける空間を創出します。</p>
                     <a href="https://example.com/coordinator-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
@@ -135,10 +135,10 @@
             </div>
 
             <div class="business-item">
-                <img src="assets/images/business/artist.jpg" alt="わたあめアーティスト" class="business-image" loading="lazy">
+                <img src="assets/images/business/FAIRYCOTTONCANDY.png" alt="FAIRY COTTON CANDY" class="business-image" loading="lazy">
                 <div class="business-description">
-                    <h3>わたあめアーティスト</h3>
-                    <p>販促イベントにおける集客手法として、お客様体験型のわたあめ作りイベントを行います。専用の機械と専任のわたあめアーティストにより、NPSの高いイベントを実現致します。</p>
+                    <h3>FAIRY COTTON CANDY</h3>
+                    <p>お子様から大人まで夢中にさせる、体験型わたあめアトラクション。専属アーティストが創り出すキャラクターわたあめや、みんなで掛け声をかけながら作る演出が会場を一体感で包み込みます。</p>
                     <a href="https://example.com/artist-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
@@ -146,10 +146,21 @@
             </div>
 
             <div class="business-item">
-                <img src="assets/images/business/consulting.jpg" alt="歯科コンサルティング" class="business-image" loading="lazy">
+                <img src="assets/images/business/training method.png" alt="FAIRY COTTON CANDY" class="business-image" loading="lazy">
+                <div class="business-description">
+                    <h3>LUMPCORE研修メソッド</h3>
+                    <p>未経験からでも活躍できるよう、実践的な座学と現場動向で人財を育成。心理学の知見も取り入れたコミュニケーション設計により、信頼を築く”相談型”営業力と、主体性・成長意欲を引き出します。</p>
+                    <a href="https://example.com/artist-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
+                        <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
+                    </a>
+                </div>
+            </div>
+
+            <div class="business-item">
+                <img src="assets/images/business/dental consulting.png" alt="歯科コンサルティング" class="business-image" loading="lazy">
                 <div class="business-description">
                     <h3>歯科コンサルティング</h3>
-                    <p>歯科クリニック向けに人的資本経営の導入へ向けた経営コンサルティング、並びにタレントマネジメントシステムの運用代行・採用支援・DXコンサルティングなど企業の経営課題に合わせた支援で、売上向上を実現致します。</p>
+                    <p>人事・経理・診療フローの見直しやシステム設計を通じて、医院経営を効率化。DX導入やWEB集客の改善まで、歯科現場に密着した支援を行います。</p>
                     <a href="https://example.com/consulting-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
