事業紹介編集②

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="business-description">
                     <h3>イベントプロモーション</h3>
                     <p>若手スタッフ中心でつくりあげる、思わず笑顔になる販促イベント。お客様との信頼関係を築く”楽しさ×営業力”のスタイルで高い満足度を実現。「夢中になれる体験」で心を動かし、ブランドの想いを届ける空間を創出します。</p>
-                    <a href="https://example.com/coordinator-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
+                    <a href="https://example.com/event-promotion-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
                 </div>
@@ -139,18 +139,18 @@
                 <div class="business-description">
                     <h3>FAIRY COTTON CANDY</h3>
                     <p>お子様から大人まで夢中にさせる、体験型わたあめアトラクション。専属アーティストが創り出すキャラクターわたあめや、みんなで掛け声をかけながら作る演出が会場を一体感で包み込みます。</p>
-                    <a href="https://example.com/artist-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
+                    <a href="https://example.com/fairy-cotton-candy-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
                 </div>
             </div>
 
             <div class="business-item">
-                <img src="assets/images/business/training method.png" alt="FAIRY COTTON CANDY" class="business-image" loading="lazy">
+                <img src="assets/images/business/training method.png" alt="LUMPCORE研修メソッド" class="business-image" loading="lazy">
                 <div class="business-description">
                     <h3>LUMPCORE研修メソッド</h3>
                     <p>未経験からでも活躍できるよう、実践的な座学と現場動向で人財を育成。心理学の知見も取り入れたコミュニケーション設計により、信頼を築く”相談型”営業力と、主体性・成長意欲を引き出します。</p>
-                    <a href="https://example.com/artist-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
+                    <a href="https://example.com/training-method-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
                 </div>
@@ -161,7 +161,7 @@
                 <div class="business-description">
                     <h3>歯科コンサルティング</h3>
                     <p>人事・経理・診療フローの見直しやシステム設計を通じて、医院経営を効率化。DX導入やWEB集客の改善まで、歯科現場に密着した支援を行います。</p>
-                    <a href="https://example.com/consulting-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
+                    <a href="https://example.com/dental-consulting-details" class="m-buttons-img-txt-08-arrow-wrap" target="_blank">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
                 </div>
