事業紹介の文一部削除、headerロゴのリンク配置

--- a/business/business.html
+++ b/business/business.html
@@ -18,10 +18,10 @@
 
     <header id="header">
         <div class="container">
-            <div class="logo">
+            <a href="../index.html#top-image" class="logo" aria-label="トップページへ戻る">
                 <h1>LUMPCORE</h1>
                 <span class="subtitle">Recruit</span>
-            </div>
+            </a>
             <nav>
                 <ul class="nav-list">
                     <li class="nav-item dropdown">
@@ -61,19 +61,6 @@
                             若手の夢忠人たちが主役となり、販促イベントの企画運営からキャラクターコンテンツの開発、実践的な研修メソッド、歯科医院の経営支援まで幅広く展開。
                             パートナー企業の課題に寄り添い、成果にこだわったソリューションを提供します。
                         </p>
-                    </div>
-                    <div class="hero-highlight">
-                        <p class="highlight-title">伴走する私たちの想い</p>
-                        <p class="highlight-body">
-                            どの事業も、現場でお客様と向き合う一人ひとりの熱量から生まれています。
-                            目の前の驚きや笑顔を大切にしながら、パートナー企業と同じ景色を見て歩むことを大事にしています。
-                        </p>
-                        <figure class="highlight-voice">
-                            <blockquote>
-                                「イベントが終わったあとに『また一緒に挑戦したい』と声をかけてもらえる瞬間が、私たちの原動力です。」
-                            </blockquote>
-                            <figcaption>イベントプランナー / 佐藤</figcaption>
-                        </figure>
                     </div>
                 </div>
             </div>
