--- a/employee/detail.html
+++ b/employee/detail.html
@@ -21,11 +21,10 @@
 
   <!-- ヘッダー：ロゴとナビゲーション -->
   <header id="header">
-    <div class="container">
-      <div class="logo">
+    <a href="../index.html#top-image" class="logo" aria-label="トップページへ戻る">
         <h1>Lumpcore</h1>
         <span class="subtitle">Recruit</span>
-      </div>
+      </a>
 
       <nav>
           <ul class="nav-list">
