--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <header id="header">
         <div class="container">
-            <div class="logo">
+            <a href="#top-image" class="logo" aria-label="トップに戻る">
                 <h1>LUMPCORE</h1>
                 <span class="subtitle">Recruit</span>
-            </div>
+            </a>
             <nav>
                 <ul class="nav-list">
                     <li class="nav-item dropdown">
