--- a/business/business.html
+++ b/business/business.html
@@ -48,7 +48,10 @@
 
     <main class="business-main">
         <section class="business-hero" aria-labelledby="business-hero-title">
-            <div class="hero-inner">
+            <figure class="hero-media">
+                <img class="hero-image" src="../assets/images/business/business-overview.png" alt="株式会社ランプコアの事業紹介のメインビジュアル">
+            </figure>
+            <div class="hero-intro">
                 <p class="hero-eyebrow">Business</p>
                 <div class="hero-content">
                     <div class="hero-text">
