事業紹介編集⑥ver2

--- a/business/business.html
+++ b/business/business.html
@@ -48,10 +48,7 @@
 
     <main class="business-main">
         <section class="business-hero" aria-labelledby="business-hero-title">
-            <figure class="hero-media">
-                <img class="hero-image" src="../assets/images/business/business-overview.png" alt="株式会社ランプコアの事業紹介のメインビジュアル">
-            </figure>
-            <div class="hero-intro">
+            <div class="hero-inner">
                 <p class="hero-eyebrow">Business</p>
                 <div class="hero-content">
                     <div class="hero-text">
