事業紹介編集⑧

--- a/business/business.html
+++ b/business/business.html
@@ -48,19 +48,14 @@
 
     <main class="business-main">
         <section class="business-hero" aria-labelledby="business-hero-title">
-            <div class="hero-inner">
-                <p class="hero-eyebrow">Business</p>
-                <div class="hero-content">
+            <figure class="hero-media">
+                <img src="../assets/images/business/coordinator.png" width="860" height="380" alt="イベント会場をコーディネートするスタッフの姿">
+            </figure>
+            <div class="hero-content">
+                <div class="hero-layout">
                     <div class="hero-text">
-                        <h1 id="business-hero-title">株式会社ランプコアの事業</h1>
-                        <p class="hero-lead">
-                            株式会社ランプコアは、人の心に夢と楽しさを届けるために、体験価値の高いプロモーションと伴走型の支援を行っています。
-                            イベント現場で磨いたコミュニケーション力と企画力を武器に、ブランドの想いを生活者の共感へとつなげます。
-                        </p>
-                        <p class="hero-lead">
-                            若手の夢忠人たちが主役となり、販促イベントの企画運営からキャラクターコンテンツの開発、実践的な研修メソッド、歯科医院の経営支援まで幅広く展開。
-                            パートナー企業の課題に寄り添い、成果にこだわったソリューションを提供します。
-                        </p>
+                        <p class="hero-eyebrow">Business</p>
+                        <h1 id="business-hero-title">事業紹介</h1>
                     </div>
                 </div>
             </div>
