事業紹介編集⑪

--- a/business/business.html
+++ b/business/business.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="../smallstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="business.css">
+    <link rel="stylesheet" href="business-mobile.css" media="(max-width: 768px)">
 </head>
+
 <body class="bg-default business-page">
     <div class="background-wrapper"></div>
 
@@ -66,28 +68,32 @@
                 <li>
                     <a class="quick-link-card" href="#event-promotion">
                         <span class="quick-link-text">イベントプロモーション</span>
-                        <span class="quick-link-note">心が動く体験づくりを現場から</span>
+                        <span class="quick-link-note">若手スタッフ中心でつくりあげる、思わず笑顔になる販促イベント。
+お客様との信頼関係を築く"楽しさ×営業力"のスタイルで高い満足度を実現。「夢中になれる体験」で心を動かし、ブランドの想いを届ける空間を創出します。</span>
                         <span class="quick-link-arrow" aria-hidden="true">→</span>
                     </a>
                 </li>
                 <li>
                     <a class="quick-link-card" href="#fairy-cotton-candy">
                         <span class="quick-link-text">FAIRY COTTON CANDY</span>
-                        <span class="quick-link-note">夢中になる甘いひとときを演出</span>
+                        <span class="quick-link-note">お子様から大人まで夢中にさせる、体験型わたあめアトラクション。
+専属アーティストが創り出すキャラクターわたあめや、みんなで掛け声をかけながら作る演出が会場を一体感で包み込みます。</span>
                         <span class="quick-link-arrow" aria-hidden="true">→</span>
                     </a>
                 </li>
                 <li>
                     <a class="quick-link-card" href="#training-method">
                         <span class="quick-link-text">LUMPCORE研修メソッド</span>
-                        <span class="quick-link-note">寄り添いながら人を育てる仕組み</span>
+                        <span class="quick-link-note">未経験からでも活躍できるよう実践的な座学と現場動向で人財を育成。
+心理学の知見も取り入れたコミュニケーション設計により、信頼を築く"相談型"営業力と、主体性・成長意欲を引き出します。</span>
                         <span class="quick-link-arrow" aria-hidden="true">→</span>
                     </a>
                 </li>
                 <li>
                     <a class="quick-link-card" href="#dental-consulting">
                         <span class="quick-link-text">歯科コンサルティング</span>
-                        <span class="quick-link-note">医院と同じ目線で未来を描く</span>
+                        <span class="quick-link-note">人事・経理・診療フローの見直しやシステム設計を通じて、医院経営を効率化。
+DX導入やWEB集客の改善まで、歯科現場に密着した支援を行います。</span>
                         <span class="quick-link-arrow" aria-hidden="true">→</span>
                     </a>
                 </li>
