夢中人紹介編集①、コード整理

--- a/employee/detail.html
+++ b/employee/detail.html
@@ -64,9 +64,16 @@
       </div>
       <div class="qa-section" id="employee-interview"></div>
     </section>
-    <div class="next-employee">
-      <a id="next-employee-link" href="#">次の社員へ →</a>
-    </div>
+    <nav class="detail-navigation" aria-label="社員インタビューページのナビゲーション">
+      <a id="back-to-index" class="nav-button back-home" href="../index.html#employee-interviews">
+        <span class="nav-title">トップページに戻る</span>
+        <span class="nav-subtitle">社員インタビュー一覧へ</span>
+      </a>
+      <a id="next-employee-link" class="nav-button next-employee" href="#">
+        <span class="nav-title">次の社員へ</span>
+        <span class="nav-subtitle">インタビューを読む</span>
+      </a>
+    </nav>
   </main>
 
   <!-- スクリプトの読み込み -->
