--- a/employee/detail.html
+++ b/employee/detail.html
@@ -21,13 +21,13 @@
 
   <!-- ヘッダー：ロゴとナビゲーション -->
   <header id="header">
-    <a href="../index.html#top-image" class="logo" aria-label="トップページへ戻る">
-        <h1>Lumpcore</h1>
+    <div class="container">
+      <a href="../index.html#top-image" class="logo" aria-label="トップページへ戻る">
+        <h1>LUMPCORE</h1>
         <span class="subtitle">Recruit</span>
       </a>
-
       <nav>
-          <ul class="nav-list">
+        <ul class="nav-list">
           <li class="nav-item dropdown">
             <a href="#" class="nav-link">
               <div class="menu-icon">
@@ -37,12 +37,12 @@
               </div>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="../index.html#purpose">Purpose</a></li>
-              <li><a href="../index.html#mission">Mission</a></li>
-              <li><a href="../index.html#employee-interviews">夢忠人紹介</a></li>
-              <li><a href="../index.html#business">事業紹介</a></li>
-              <li><a href="../index.html#news">ニュース</a></li>
-              <li><a href="../index.html#contact">お問い合わせ</a></li>
+              <li><a href="../index.html#purpose">・Purpose</a></li>
+              <li><a href="../index.html#mission">・Mission</a></li>
+              <li><a href="../index.html#employee-interviews">・夢忠人紹介</a></li>
+              <li><a href="../index.html#business">・事業紹介</a></li>
+              <li><a href="../index.html#news">・ニュース</a></li>
+              <li><a href="../index.html#contact">・お問い合わせ</a></li>
             </ul>
           </li>
         </ul>
