下部リンク編集①

--- a/index.html
+++ b/index.html
@@ -209,6 +209,106 @@
         <a href="line://app">LINEで応募</a>
     </section>
 
+    <section id="quick-links" class="link-hub hidden fade-in" aria-labelledby="quick-links-title">
+        <div class="link-hub-header">
+            <p class="section-hero-eyebrow">Navigation</p>
+            <h2 id="quick-links-title" class="section-hero-title">専用ページリンク</h2>
+            <p class="link-hub-description">Lumpcore Recruitの各コンテンツへ素早くアクセスできるショートカットです。気になるセクションをチェックしましょう。</p>
+        </div>
+        <div class="link-grid" role="list">
+            <a class="link-card" href="#purpose" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/purpose-visual.png" alt="Purpose セクション" loading="lazy">
+                    <span class="link-card-number">01</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">Purpose</span>
+                    <h3 class="link-card-title">私たちの原点</h3>
+                    <p class="link-card-description">パーパスに込めた想いやビジョンを深堀りするコンテンツです。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+            <a class="link-card" href="#mission" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/mission-visual.png" alt="Mission セクション" loading="lazy">
+                    <span class="link-card-number">02</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">Mission</span>
+                    <h3 class="link-card-title">夢が笑われない社会</h3>
+                    <p class="link-card-description">ミッションや価値観、行動指針をご紹介するページへ。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+            <a class="link-card" href="#employee-interviews" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/team/team1.jpg" alt="夢忠人インタビュー" loading="lazy">
+                    <span class="link-card-number">03</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">Members</span>
+                    <h3 class="link-card-title">夢忠人インタビュー</h3>
+                    <p class="link-card-description">現場で活躍するメンバーのストーリーをまとめた一覧です。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+            <a class="link-card" href="employee/detail.html" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/team/team9.jpg" alt="社員詳細ページ" loading="lazy">
+                    <span class="link-card-number">04</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">Member Story</span>
+                    <h3 class="link-card-title">社員詳細ページ</h3>
+                    <p class="link-card-description">個々のキャリアや挑戦の軌跡を深掘りしたコンテンツです。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+            <a class="link-card" href="business/business.html" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/business/eventpromotion.png" alt="事業紹介" loading="lazy">
+                    <span class="link-card-number">05</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">Business</span>
+                    <h3 class="link-card-title">事業紹介サイト</h3>
+                    <p class="link-card-description">ランプコアが展開する各事業内容を詳しくご覧いただけます。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+            <a class="link-card" href="#news" role="listitem">
+                <div class="link-card-media">
+                    <img src="assets/images/backgrounds/newbackground.png" alt="ニュースセクション" loading="lazy">
+                    <span class="link-card-number">06</span>
+                </div>
+                <div class="link-card-content">
+                    <span class="link-card-eyebrow">News</span>
+                    <h3 class="link-card-title">最新情報</h3>
+                    <p class="link-card-description">最新のニュースやイベント情報をこちらでチェック。</p>
+                    <div class="link-card-footer">
+                        <span class="link-card-action">View More</span>
+                        <span class="link-card-arrow" aria-hidden="true">→</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </section>
+
     <div id="entry-nav-wrap" class="entry-nav-wrap bottom-right hidden">
         <a href="#apply" class="entry-nav-link apply">
             <span class="icon">📄</span>
