下部リンク編集③

--- a/index.html
+++ b/index.html
@@ -209,12 +209,7 @@
         <a href="line://app">LINEで応募</a>
     </section>
 
-    <section id="quick-links" class="link-hub hidden fade-in" aria-labelledby="quick-links-title">
-        <div class="link-hub-header">
-            <p class="section-hero-eyebrow">Navigation</p>
-            <h2 id="quick-links-title" class="section-hero-title">専用ページリンク</h2>
-            <p class="link-hub-description">Lumpcore Recruitの各コンテンツへ素早くアクセスできるショートカットです。気になるセクションをチェックしましょう。</p>
-        </div>
+    <section id="quick-links" class="link-hub hidden fade-in" aria-label="専用ページリンク">
         <div class="link-grid" role="list">
             <a class="link-card" href="#purpose" role="listitem">
                 <div class="link-card-media">
