下部リンク編集④

--- a/index.html
+++ b/index.html
@@ -314,6 +314,22 @@
             <span class="text">募集要項</span>
         </a>
     </div>
+    
+<footer class="site-footer">
+        <div class="site-footer__inner">
+            <div class="site-footer__brand">
+                <span class="site-footer__logo-wrap">
+                    <img src="assets/images/logo/lumpcore-logo.png" alt="株式会社ランプコアのロゴ" class="site-footer__logo">
+                </span>
+                <p class="site-footer__copy">© 2024 Lumpcore Inc.</p>
+            </div>
+            <nav class="site-footer__links" aria-label="外部リンク">
+                <a href="https://www.lumpcore.co.jp/" target="_blank" rel="noopener noreferrer">コーポレートサイト</a>
+                <a href="https://www.lumpcore.co.jp/recruit/" target="_blank" rel="noopener noreferrer">採用サイト</a>
+                <a href="https://www.lumpcore.co.jp/privacy/" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
+            </nav>
+        </div>
+    </footer>
 
     <script src="script.js" defer></script>
     <script src="employee/employee.js" defer></script>
