--- a/index.html
+++ b/index.html
@@ -317,16 +317,30 @@
     
 <footer class="site-footer">
         <div class="site-footer__inner">
-            <div class="site-footer__brand">
+            <div class="site-footer__column site-footer__brand">
                 <span class="site-footer__logo-wrap">
                     <img src="assets/images/logo/lumpcore-logo.png" alt="株式会社ランプコアのロゴ" class="site-footer__logo">
                 </span>
                 <p class="site-footer__copy">© 2025 Lumpcore Inc.</p>
             </div>
-            <nav class="site-footer__links" aria-label="外部リンク">
-                <a href="https://www.lumpcore.co.jp/" target="_blank" rel="noopener noreferrer">コーポレートサイト</a>
-                <a href="https://www.lumpcore.co.jp/recruit/" target="_blank" rel="noopener noreferrer">採用サイト</a>
-                <a href="https://www.lumpcore.co.jp/privacy/" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a>
+            <nav class="site-footer__column site-footer__nav" aria-label="サイト内リンク">
+                <p class="site-footer__column-title">サイト内リンク</p>
+                <ul class="site-footer__list">
+                    <li><a href="#purpose">Purpose</a></li>
+                    <li><a href="#mission">Mission</a></li>
+                    <li><a href="#employee-interviews">夢忠人紹介</a></li>
+                    <li><a href="#business">事業紹介</a></li>
+                    <li><a href="#news">ニュース</a></li>
+                    <li><a href="#contact">お問い合わせ</a></li>
+                </ul>
+            </nav>
+            <nav class="site-footer__column site-footer__links" aria-label="外部リンク">
+                <p class="site-footer__column-title">外部リンク</p>
+                <ul class="site-footer__list">
+                    <li><a href="https://www.lumpcore.co.jp/" target="_blank" rel="noopener noreferrer">コーポレートサイト</a></li>
+                    <li><a href="https://www.lumpcore.co.jp/recruit/" target="_blank" rel="noopener noreferrer">採用サイト</a></li>
+                    <li><a href="https://www.lumpcore.co.jp/privacy/" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a></li>
+                </ul>
             </nav>
         </div>
     </footer>
